--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@ultimate/ngxerrors",
-  "version": "0.0.0",
-  "description": "A declarative validation module for reactive forms",
-  "author": "Ultimate Angular",
+  "name": "@hackages/ngxerrors",
+  "version": "6.0.0",
+  "description": "A declarative validation module for reactive forms forked from UltimateAngular/ngx-errors",
+  "author": "Hackages",
   "license": "MIT",
   "repository": {
-    "url": "https://github.com/UltimateAngular/ngxerrors.git",
+    "url": "https://github.com/hackages/ngx-errors.git",
     "type": "git"
   },
   "scripts": {
