Angular 11 support and Package updates

--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,6 @@
     "type": "git"
   },
   "peerDependencies": {
-    "@angular/forms": "^8.0.0"
+    "@angular/forms": "^8.0.0 || ^9.0.0 || ^10.0.0 || ^11.0.0"
   }
 }
