--- a/package.json
+++ b/package.json
@@ -22,46 +22,46 @@
     "test:watch": "karma start"
   },
   "devDependencies": {
-    "@angular/compiler": "8.0.0",
-    "@angular/compiler-cli": "8.0.0",
-    "@types/jasmine": "2.8.9",
-    "@types/karma": "3.0.0",
-    "@types/node": "^10.12.0",
+    "@angular/compiler": "11.0.0",
+    "@angular/compiler-cli": "11.0.0",
+    "@types/jasmine": "3.6.1",
+    "@types/karma": "5.0.1",
+    "@types/node": "^14.14.7",
     "angular2-template-loader": "0.6.2",
     "awesome-typescript-loader": "5.2.1",
-    "file-loader": "2.0.0",
-    "html-loader": "0.5.5",
-    "jasmine-core": "3.2.1",
-    "karma": "3.1.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-jasmine": "1.1.2",
-    "karma-sourcemap-loader": "0.3.7",
+    "file-loader": "6.2.0",
+    "html-loader": "1.3.2",
+    "jasmine-core": "3.6.0",
+    "karma": "5.2.3",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-jasmine": "4.0.1",
+    "karma-sourcemap-loader": "0.3.8",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "3.0.5",
-    "node-sass": "4.9.4",
-    "nodemon": "1.18.4",
-    "raw-loader": "0.5.1",
-    "rimraf": "2.6.2",
-    "rollup": "0.66.6",
-    "sass-loader": "7.1.0",
-    "typescript": "3.4.5",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "4.22.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "3.6.0"
+    "karma-webpack": "4.0.2",
+    "node-sass": "^5.0.0",
+    "nodemon": "2.0.6",
+    "raw-loader": "4.0.2",
+    "rimraf": "3.0.2",
+    "rollup": "2.33.2",
+    "sass-loader": "10.1.0",
+    "typescript": "4.0.5",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "5.4.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
-    "@angular/animations": "8.0.0",
-    "@angular/common": "8.0.0",
-    "@angular/core": "8.0.0",
-    "@angular/forms": "8.0.0",
-    "@angular/platform-browser": "8.0.0",
-    "@angular/platform-browser-dynamic": "8.0.0",
-    "@angular/router": "8.0.0",
-    "core-js": "2.5.7",
-    "reflect-metadata": "0.1.12",
-    "rxjs": "6.4.0",
-    "tslib": "1.9.3",
-    "zone.js": "0.9.1"
+    "@angular/animations": "11.0.0",
+    "@angular/common": "11.0.0",
+    "@angular/core": "11.0.0",
+    "@angular/forms": "11.0.0",
+    "@angular/platform-browser": "11.0.0",
+    "@angular/platform-browser-dynamic": "11.0.0",
+    "@angular/router": "11.0.0",
+    "core-js": "3.7.0",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "6.6.3",
+    "tslib": "2.0.3",
+    "zone.js": "0.11.3"
   }
 }
